// Copyright 2012 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// Sync protocol datatype extension for typed urls.

// If you change or add any fields in this file, update proto_visitors.h and
// potentially proto_enum_conversions.{h, cc}.

syntax = "proto2";

option java_multiple_files = true;
option java_package = "org.chromium.components.sync.protocol";

option optimize_for = LITE_RUNTIME;

package sync_pb;

// Properties of typed_url sync objects - fields correspond to similarly named
// fields in history::URLRow.
message TypedUrlSpecifics {
  // Actual URL that was typed.
  optional string url = 1;
  // Title of the page corresponding to this URL.
  optional string title = 2;
  // True if the URL should NOT be used for auto-complete.
  optional bool hidden = 4;
  // Timestamps for all visits to this URL.
  repeated int64 visits = 7 [packed = true];
  // The PageTransition::Type for each of the visits in the |visit| array. Both
  // arrays must be the same length.
  repeated int32 visit_transitions = 8 [packed = true];

  reserved 3;
  reserved "typed_count";
  reserved 5;
  reserved "visit";
  reserved 6;
  reserved "visited_count";
}
